--- a/src/components/GroceryComponents/VegItems/veggrocery.css
+++ b/src/components/GroceryComponents/VegItems/veggrocery.css
@@ -118,3 +118,14 @@ button a:hover{
         font-size: 90%;
     }
 }
+@media only screen and (max-width: 600px) {
+    .veg-container p{
+        font-style: italic;
+        font-family: 'Times New Roman', Times, serif;
+        text-align: center;
+        font-size: 45%;
+    }
+    .addToCart{
+        transform: translateX(-20%);
+    }
+}
