--- a/src/CartComponents/Products/Products.module.css
+++ b/src/CartComponents/Products/Products.module.css
@@ -1,15 +1,11 @@
+
 .products {
     width: 100%;
-    margin-top: 2rem;
+    padding-top: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    background: url("../../images/productBack.jpg");
   }
-  .products {
-    width: 100%;
-    margin-top: 2rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
+
     
