--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -6,6 +6,9 @@
     font-family: 'Abhaya Libre', serif;
     bottom: 0;
     clear:both;
+    left:0;
+    bottom:0;
+    right:0;    
 }
 
 .paragraph{
@@ -43,6 +46,7 @@
     margin-right: 25%;
     list-style: none;
     text-align: center;
+
 }
 
 @media screen and (max-width:1100px) {
