--- a/src/CartComponents/Products/Products.module.css
+++ b/src/CartComponents/Products/Products.module.css
@@ -5,7 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: url("../../images/productBack.jpg");
+    background:rgb(10, 8, 48);
   }
 
     
